--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -1,3 +1,18 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+@import url('https://fonts.cdnfonts.com/css/avenir');
+
+body{
+    background-color: #040714;
+    color: #f9f9f9;
+
+    font-family: 'Avenir', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+a{
+    color:#f9f9f9;
+    text-decoration: none;
+}
