--- a/assets/style.scss
+++ b/assets/style.scss
@@ -73,6 +73,9 @@ a{
           display: none;
         }
       }
+    .user-photo {
+        margin-top: -15px;
+    }
     .login-button {
         border: 1px solid #f9f9f9;
         border-radius: 4px;
