--- a/assets/style.scss
+++ b/assets/style.scss
@@ -55,7 +55,7 @@ a{
 .home-page{
     position: relative;
     min-height: calc(100vh - 250px);
-    overflow-x: hidden;
+    overflow: hidden;
     display: block;
     top: 17px;
     padding: 0 calc(3.5vw + 5px);
@@ -92,7 +92,7 @@ a{
         }
       }
     .user-photo {
-        margin-top: -15px;
+        margin-top: -5px;
     }
     .login-button {
         border: 1px solid #f9f9f9;
@@ -118,4 +118,68 @@ a{
         }
       }
    
+}
+.slick-slider{
+  margin-top: 20px;
+
+  & > button {
+    opacity: 0;
+    height: 100%;
+    width: 5vw;
+    z-index: 1;
+
+    &:hover {
+      opacity: 1;
+      transition: opacity 0.2s ease 0s;
+    }
+  }
+
+  ul li button {
+    &:before {
+      font-size: 10px;
+      color: rgb(150, 158, 171);
+    }
+  }
+
+  li.slick-active button:before {
+    color: white;
+  }
+
+  .slick-list {
+    overflow: initial;
+  }
+
+  .slick-prev {
+    left: -75px;
+  }
+
+  .slick-next {
+    right: -75px;
+  }
+  .wrap{
+    border-radius: 4px;
+  cursor: pointer;
+  position: relative;
+
+  a {
+    border-radius: 4px;
+    box-shadow: rgb(0 0 0 / 69%) 0px 26px 30px -10px,
+      rgb(0 0 0 / 73%) 0px 16px 10px -10px;
+    cursor: pointer;
+    display: block;
+    position: relative;
+    padding: 4px;
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
+
+    &:hover {
+      padding: 0;
+      border: 4px solid rgba(249, 249, 249, 0.8);
+      transition-duration: 300ms;
+    }
+  }
+  }
 }
